force-app/main/default/objects/Graffiti_Location__c/Graffiti_Location__c.object-meta.xml
<CustomObject>
    <label>Graffiti Location</label>
    <nameField>
        <displayFormat>GL-{0000}</displayFormat>
        <label>Graffiti Location #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Graffiti Locations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>