force-app/main/default/objects/Graffiti_Location__c/fields/Cleanslate_Work_Log__c.field-meta.xml
<CustomField>
    <fullName>Cleanslate_Work_Log__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cleanslate Work Log</label>
    <referenceTo>Work_Log__c</referenceTo>
    <relationshipLabel>Graffiti Locations</relationshipLabel>
    <relationshipName>Graffiti_Locations</relationshipName>
    <type>Lookup</type>
</CustomField>