force-app/main/default/objects/Graffiti_Location__c/fields/Graffiti_Location__c.field-meta.xml
<CustomField>
    <fullName>Graffiti_Location__c</fullName>
    <label>Graffiti Location</label>
    <type>TextArea</type>
</CustomField>